# haskell-workshop

./: .gitignore  LICENSE  README.md  TAGS  haskell-workshop.cabal  stack.yaml
.stack-work/install/x86_64-osx/lts-5.13/7.10.3/flag-cache/: HTTP-4000.3.3-4a3d52d16246cc25083439683139c5d8  aeson-0.9.0.1-93ef199727abea8507a13d75fc215199  async-2.1.0-033e4fae4da028fc2d6502bd36e5e5a1  attoparsec-0.13.0.1-978b631d99d840db87166213f35fd6c8  dlist-0.7.1.2-220d0c7d28c858a7c7c383616eebf3ec  hashable-1.2.4.0-7550865fa2a6bb3193b4e312352713f7  haskell-workshop-0.1.0.0-75baf5d694d45133905faa9d4cefa208  haskell-workshop-0.1.0.0-a051ce39abc586d1f7649fe69b5f36dc  mtl-2.2.1-3af90341e75ee52dfc4e3143b4e5d219  network-2.6.2.1-bf32f5de218df3691d26c6bf5fa0c6d5  network-uri-2.6.1.0-8a43577e0ee9f2f1932119991e28e06e  parsec-3.1.9-c3f77b94a5c8676966adc406bbbe824a  primitive-0.6.1.0-b2a7b9f8d5591c0d4ce7ef238a3217d2  scientific-0.3.4.6-231fe2dae16ddf33db193ed40eaed096  stm-2.4.4.1-7050c728ed5b2315e2c6b56d8bf9837f  string-conversions-0.4-1efe9572d880639e173f1582486f512b  syb-0.6-d154b8ffa473f7cfcfc32ca4d99f62f7  text-1.2.2.1-7d0e2ea4f6c20c86065fc9fde58d97e6  unordered-containers-0.2.5.1-e4384e6acd36233aea940016b6bcf7a7  utf8-string-1.0.1.1-d4ff7be1a0ccd2257ed767fbfc920f6a  vector-0.11.0.0-324da2b07f25721d305480db94a9f1d6
.stack-work/install/x86_64-osx/lts-5.13/7.10.3/lib/x86_64-osx-ghc-7.10.3/haskell-workshop-0.1.0.0-8st4w5xVEtn2MwZM34YRM4/: Lib.hi
app/: Main.hs
src/: :w  FinalReddit.hs  Lib.hs  MyReddit.hs  Reddit.hs  Syntax.hs
(+2 files in other folders)
