name:                haskell-workshop
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/5outh/haskell-workshop#readme
license:             BSD3
license-file:        LICENSE
author:              Benjamin Kovach
maintainer:          benjamin@kovach.me
copyright:           MIT
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FinalReddit,
                       MyReddit,
                       Syntax
  build-depends:       base >= 4.7 && < 5
                     , HTTP
                     , aeson
                     , text
                     , vector
                     , string-conversions
                     , async
                     , Spock
                     , lucid
                     , split
                     , transformers
  default-language:    Haskell2010

executable redditui
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-workshop
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sellerlabs/haskell-workshop
